scripts/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: combinator
---
apiVersion: v1
kind: Namespace
metadata:
  name: worker
